<resources>
    <string name="app_name">Quick Wallet</string>

    <string name="enter_name">Enter Name</string>
    <string name="action_settings">Settings</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="detail_text">Enter details(if required)</string>
    <string name="add_amount">Enter Amount</string>
    <string name="search_hint_text">Search</string>
    <string name="clear_balance">Clear Pending Balance</string>
    <string name="enter_details_hint">Enter Transaction Details</string>
    <string name="clear_history">Clear History</string>
    <string name="actions">Actions</string>
    <string name="transactions">Transactions</string>
    <string name="send_notification">Send notification</string>
    <string name="add_transaction">Add transaction</string>

    <string name="expenditure">Expenditure</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="lent">Lent</string>
    <string name="borrowed">Borrowed</string>
    <string name="lent_colon">Lent:  \b</string>
    <string name="borrowed_colon">Borrowed: \</string>
    <string name="amount_colon">Amount: \</string>
    <string name="no_balance">No Pending Balance</string>
    <string name="current_balance_colon">Current Balance: \</string>
    <!--<string name="pending_balance">Pending Balance</string>-->
    <string name="pending_balance_line">Pending Balance:\n</string>
    <string name="clear_balance_text">Clear Balance</string>
    <string name="empty_detail_default_text">No details specified</string>
    <string name="last_trans_clear_balance">Last Transaction: Clear Balance</string>

    <string name="toast_help_enter_name">Please enter name</string>
    <string name="toast_found_user">Found user sending notification</string>
    <string name="toast_sent_notification">Sent Notification</string>
    <string name="toast_create_account">This feature requires you to create an account</string>
    <string name="toast_no_user">No user found with associated contact number</string>
    <string name="toast_check_internet">Please check your internet connection</string>
    <string name="toast_retry">Please try again</string>
    <string name="snackbar_balance_cleared_beg">Any pending balance with \</string>
    <string name="snackbar_balance_cleared_end">\  is now cleared.</string>

    <string name="add">Add</string>
    <string name="view_history">History</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="enter">Enter</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_phone">Enter PhoneNo</string>
    <string name="undo">UNDO</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="done_U">DONE</string>
    <string name="security">Security</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="tutorial">Tutorial</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="or">OR</string>
    <string name="skip">SKIP</string>
    <string name="share">Share</string>

    <string name="dev_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_activity_banner_ad_unit_id">ca-app-pub-7975954632775689/1175277850</string>
    <string name="wallet_activity_banner_ad_unit_id">ca-app-pub-7975954632775689/9198072258</string>

    <string name="my_wallet">My Wallet</string>
    <string name="funds">Funds in Wallet: \</string>
    <string name="income_today">Total Income today: \</string>
    <string name="expense_today">Total Expenses today: \</string>



    <string name="my_account">My Account</string>
    <string name="emailid">Email ID</string>
    <string name="login">Phone No</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="wrong_email">Please enter a valid E-Mail address</string>
    <string name="wrong_number">Please enter a valid mobile number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password_dialog_text_beg">An email will be sent at \</string>
    <string name="reset_password_dialog_text_end"> . Please check your mail and follow the steps to reset your password</string>

    <string name="please_wait">Please Wait</string>
    <string name="editing_profile">Editing profile</string>
    <string name="signing_out">Signing out</string>
    <string name="adding_transaction">Adding Transaction</string>

    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="contact_choser_dialog_footer_text">Please note that setting the contact correctly is essential in sending notifications</string>
    <string name="contact_chooser_dialog_header_text">Choose contact to associate</string>

    <string name="gcm_noti_lent_message">I lent you \</string>
    <string name="gcm_noti_borrowed_message">I borrowed from you \</string>
    <string name="gcm_noti_details_message">\nDetails: \</string>
    <string name="gcm_noti_end_message">\nPlease make a note of this transaction.</string>
    <string name="gcm_noti_summary">Tap to add transaction</string>
    <string name="noti_pending_transaction">You have pending transactions</string>

    <string name="enter_pin">Enter PIN to unlock</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="enter_saved_pin">Enter saved PIN</string>
    <string name="wrong_pin_length">Please enter a PIN of four characters</string>
    <string name="wrong_pin">Sorry, wrong Pin. Enter again</string>

    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="pref_my_account">Edit account details/Create an account</string>
    <string name="pref_notifications_summary">Enable/Disable notifications</string>
    <string name="pref_notification_interval">Set interval between notificatins</string>
    <string name="pref_notification_persistent">Persistent Notification</string>
    <string name="pref_notification_persistent_summary">Create a persistent notification for directly adding transactions from anywhere</string>
    <string name="pref_lock_app">Lock Application</string>
    <string name="pref_lock_app_summary">If enabled a PIN is required to enter application</string>
    <string name="pref_change_pin">Change PIN</string>
    <string name="pref_help">Help and Feedback</string>
    <string name="pref_help_summary">Send an email to developer</string>
    <string name="pref_share_summary">Share this application with your friends to easily manage transactions</string>
    <string name="pref_get_more">Get More</string>
    <string name="pref_get_more_summary">View developer\'s other work on Google Play</string>
    <string-array name="type_spinner_entries">
        <item name="Lent">Lent</item>
        <item name="Borrowed">Borrowed</item>
    </string-array>
    <string name="play_dev_link">https://play.google.com/store/apps/dev?id=6203448337154291323</string>

    <string name="go_cloud_summary">Creating an account enables you to send and receive notifications when you add transactions or someone adds transactions involving you</string>
    <string name="go_cloud_create_account">Create an account</string>
    <string name="go_cloud_sign_in">Sign in with your existing account</string>
    <string name="go_cloud_continue">Continue without creating an account</string>

    <string name="tutorial_one_description">Click on the \'+\' button to add transactions. Use the searchbar at top to search added transactions by person\'s name</string>
    <string name="tutorial_two_description">Swipe on list items to clear pending balance</string>
    <string name="tutorial_three_description">Create an account to send and receive notifications when transactions are added involving you</string>
    <string name="tutorial_four_description">View complete history. Click on a transaction to edit or delete it</string>
    <string name="tutorial_five_description">Manage your wallet. Keep track of your daily income and expenses</string>

    <string name="request_permissions_contacts">The read contact permission is required to provide you with results from your contacts when adding transactions and to display the contact\'s name and image. No other detail from the contacts are read or used. Please grant the permission when prompted for proper functionality.</string>
    <string name="request_permission_telephone">The read phone state permission is required to get the device ID which is required in registering for cloud notifications. Please grant the permission when requested or else you will not be able to receive notifications. The app will never make or manage your phone calls</string>
    <string name="share_msg_text">Quick Wallet\nhttps://play.google.com/store/apps/details?id=com.rose.quickwallet\nGet this application and we can easily manage our transactions</string>
    <string name="currency">\u20B9</string>
    <string name="snackbar_failed_backup">Backup Failed</string>
    <string name="snackbar_request_storage_permission">Please grant write external storage permission</string>
    <string name="snackbar_backup_complete">Backup Completed</string>
    <string name="snackbar_restore_complete">Data restored successfully</string>
    <string name="snackbar_create_backup">Please create a backup first</string>
    <string name="permission_storage_request_message">The write external storage permission is required to create a copy of the database on sd card</string>
    <string name="dialog_confirm_restore_data">This will replace your current application data. Are you sure you want to continue?</string>
    <string name="clear">Clear</string>
    <string name="tablet_details_help_text">Select an item from left to view the complete history</string>
    <string name="next">Next</string>
    <string name="set_currency">Set currency</string>
    <string name="cd_remove_name">Click to remove selected name and add other name</string>
    <string name="cd_contact_image">Contact Image</string>
    <string name="cd_click_to_open_drawer">Click to open drawer</string>
</resources>
