<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">
    <TextView
        android:id="@+id/enter_pin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_pin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_centerInParent="true"
        />
    <LinearLayout
        android:id="@+id/pin_edit_text_layout"
        android:layout_below="@id/enter_pin_text"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/pin_text_1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="1" />
        <EditText
            android:id="@+id/pin_text_2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="1"/>
        <EditText
            android:id="@+id/pin_text_3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="1"/>
        <EditText
            android:id="@+id/pin_text_4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:imeActionId="@+id/password_enter_ime_action"/>
    </LinearLayout>
    <TextView
        android:id="@+id/pin_error_text"
        android:layout_below="@id/pin_edit_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/wrong_pin"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/pin_enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:onClick="onEnter"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/pin_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:onClick="onCancel"/>
    </LinearLayout>
</RelativeLayout>