<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddNewTransactionActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_transaction"
    android:animateLayoutChanges="true"
    android:layout_margin="5dp"
    android:gravity="center_vertical"
    android:layout_gravity="center">
    <android.support.v7.widget.CardView
        android:id = "@+id/search_view_card"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        app:cardElevation="3dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--<SearchView
                android:id="@+id/search_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:iconifiedByDefault="false">
            </SearchView>-->
            <ImageView
                android:id="@+id/search_view_search_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_search"/>
            <AutoCompleteTextView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:imeActionLabel="Done"
                android:background="@drawable/outline"
                android:paddingLeft="60dp"
                android:hint="@string/enter_name" />
            <ImageButton
                android:id="@+id/search_view_done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="5dp"
                android:src="@drawable/ic_send"
                android:background="?attr/selectableItemBackground"
                android:onClick="onClickSearch"/>
            <RelativeLayout
                android:id="@+id/contact_details"
                android:layout_width="match_parent"
                android:layout_below="@id/search_view"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:padding="10dp">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/contact_detail_image"
                    android:adjustViewBounds="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_detail_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/contact_detail_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_detail_balance"
                    android:layout_below="@+id/contact_detail_name"
                    android:layout_alignLeft="@+id/contact_detail_name"
                    android:layout_toRightOf="@+id/contact_detail_image"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <org.buraktamturk.loadingview.LoadingView
        android:id="@+id/add_transaction_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lv_title="@string/adding_transaction"
        app:lv_loading="false"
        android:layout_below="@id/search_view_card"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_balance"
                android:visibility="gone"
                android:id="@+id/clear_balance_button"
                android:onClick="onClearBalance"
                android:layout_gravity="center_horizontal"/>-->
            <android.support.v7.widget.CardView
                android:id = "@+id/amount_view_card"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_marginTop="1dp"
                android:padding="2dp"
                app:cardElevation="3dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/type_options"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:layout_alignBottom="@+id/amount_edit_text_layout">
                        <RadioButton
                            android:id="@+id/radio_button_lent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lent"
                            android:onClick="onTypeRadioButtonSelected"
                            android:checked="true"/>
                        <RadioButton
                            android:id="@+id/radio_button_borrowed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/borrowed"
                            android:onClick="onTypeRadioButtonSelected"/>
                    </RadioGroup>
                    <Button
                        android:id="@id/amount_edit_text_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/type_options"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:focusable="false"
                        android:onClick="startCalCActivity"
                        android:text="@string/enter_amount"
                        />
                    <RelativeLayout
                        android:id="@+id/money_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_below="@id/type_options"
                        android:visibility="gone"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:id="@+id/money_detail_image"
                            android:adjustViewBounds="true"
                            android:src="@drawable/money_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/money_detail_name"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/money_detail_image"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/money_detail_balance"
                            android:layout_below="@+id/money_detail_name"
                            android:layout_alignLeft="@+id/money_detail_name"
                            android:layout_toRightOf="@+id/money_detail_image"
                            android:textSize="15sp"/>
                    </RelativeLayout>
                    <!--<android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/details_edit_text_layout"
                        android:layout_below="@id/money_details"
                        android:background="@drawable/outline"
                        android:layout_margin="10dp">-->
                        <EditText
                            android:id="@+id/details_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/money_details"
                            android:layout_margin="10dp"
                            android:hint="@string/enter_details_hint"
                            android:gravity="center_horizontal"
                            android:background="@drawable/outline"
                            android:maxLines="1" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                app:cardElevation="3dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <CheckBox
                        android:id="@+id/checkbox_send_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:checked="false"
                        android:onClick="onCheckboxClick"
                        android:text="@string/send_notification">
                    </CheckBox>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/button_bar_add_transaction"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_button"
                    android:gravity="center"
                    android:text="@string/add"
                    android:onClick="onAdd"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp" />
                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:onClick="onCancel"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />
            </LinearLayout>
        </LinearLayout>
    </org.buraktamturk.loadingview.LoadingView>
</RelativeLayout>