<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_transaction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:animateLayoutChanges="true"
    android:layout_margin="16dp">
    <RadioGroup
        android:id="@+id/type_radio_options_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_lent_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lent"
            android:checked="true"
            android:onClick="onTypeRadioButtonSelected"/>
        <RadioButton
            android:id="@+id/radio_button_borrowed_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrowed"
            android:onClick="onTypeRadioButtonSelected"/>
    </RadioGroup>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_item_amount_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/type_radio_options_edit"
        android:layout_marginLeft="10dp">
        <EditText
            android:id="@+id/edit_item_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/amount_hint"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:id="@+id/edit_item_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/type_radio_options_edit"
        android:visibility="gone"
        android:padding="10dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/edit_item_detail_image"
            android:adjustViewBounds="true"
            android:src="@drawable/money_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_item_detail_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@id/edit_item_detail_image"
            android:layout_toEndOf="@id/edit_item_detail_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_item_detail_balance"
            android:layout_below="@id/edit_item_detail_name"
            android:layout_alignLeft="@id/edit_item_detail_name"
            android:layout_toRightOf="@id/edit_item_detail_image"
            android:textSize="15sp"/>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/edit_item_details">
        <EditText
            android:id="@+id/edit_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Details (if required)" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Edit"
        android:onClick="onEditWalletItem"/>
</RelativeLayout>